Fixes overflow-x issue on safari mobile

--- a/src/Ovski/MinecraftWebsiteBundle/Resources/public/css/style.css
+++ b/src/Ovski/MinecraftWebsiteBundle/Resources/public/css/style.css
@@ -23,11 +23,8 @@
   ***********/
 
 body, html {
+    overflow: hidden;
     font-family: title;
-}
-
-body {
-    overflow-x: hidden;
 }
 
 a { color: rgb(69, 168, 30); }
